# denoising-event-sequences

./: .gitignore  CHECKLIST.md  README.md  TASK.md  base.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
configs/: base.yaml
configs/ablations/: A10_d3pm_aux.yaml  (+10 more)
notebooks/: 01_eda_rosbank.ipynb  02_eda_gender.ipynb  03_eda_age_group.ipynb  kaggle_a9_d3pm_forecast_aux_experiments.ipynb  kaggle_baseline_aggregates_catboost.ipynb  kaggle_baseline_aggregates_catboost_public_benchmarks.ipynb  kaggle_baseline_coles_ptls.ipynb  kaggle_baseline_coles_public_benchmarks.ipynb  kaggle_baseline_supervised_encoder.ipynb  kaggle_baseline_supervised_encoder_public_benchmarks.ipynb  kaggle_diffusion_pipeline.ipynb  kaggle_final_dme_public_benchmarks.ipynb  kaggle_final_forecast_diffusion_pipeline.ipynb  kaggle_final_forecast_pretrain_sweep.ipynb  kaggle_forecast_pipeline.ipynb  kaggle_low_label_dme_forecast_denoising_rosbank.ipynb  kaggle_main.ipynb  kaggle_prepare_gender_age_group_data.ipynb  kaggle_scenario_module.ipynb
scripts/: build_transition_matrix.py  evaluate.py  finetune.py  forecast_pretrain.py  generate_events.py  prepare_data.py  prepare_public_benchmark_data.py  pretrain.py  run_ablation.py  run_low_label.py
tests/: test_corruption.py  test_dataset.py  test_diffusion.py  test_forecasting.py  test_generation.py  test_losses.py  test_model_shapes.py  test_optim.py  test_pooling.py  test_preprocessing_extended.py  test_public_benchmark_data.py  test_scenario_notebook.py  test_smoke.py  test_transition_matrix.py  test_utils_modules.py
(+41 files in other folders)
